# service/api/api-handler.go
@@ -8,7 +8,7 @@ import (
 func (rt *_router) Handler() http.Handler {
 
 	// Login
-	rt.router.POST("/session",rt.wrap(rt.doLogin))
+	rt.router.POST("/session",rt.wrap(rt.doLogin)) // DONE
 
 	// Ban actions
 	rt.router.PUT("/user/:uid/ban/:banneduid",rt.wrap(rt.banUser))
@@ -26,7 +26,7 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.GET("/user/:uid/profile",rt.wrap(rt.getUserProfile))
 
 	// Photo actions
-	rt.router.DELETE("/user/:uid/photo/:photoid",rt.wrap(rt.deletePhoto))
+	rt.router.DELETE("/user/:uid/photo/:photoid",rt.wrap(rt.deletePhoto)) // DONE
 	rt.router.POST("/user/:uid/photo",rt.wrap(rt.uploadPhoto)) // DONE
 	rt.router.GET("/user/:uid/photo",rt.wrap(rt.getPhotos))
 
@@ -36,7 +36,7 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.GET("/user/:uid/photo/:photoid/likes",rt.wrap(rt.getLikes))
 
 	// Comment actions
-	rt.router.DELETE("/user/:uid/photo/:photoid/comments/:commentid",rt.wrap(rt.uncommentPhoto))
+	rt.router.DELETE("/user/:uid/photo/:photoid/comments/:commentid",rt.wrap(rt.uncommentPhoto)) // DONE
 	rt.router.POST("/user/:uid/photo/:photoid/comments",rt.wrap(rt.commentPhoto))
 	rt.router.GET("/user/:uid/photo/:photoid/comments",rt.wrap(rt.getComments))
 
